unpackaged/main/default/objects/Account/fields/Number_of_Contacts__c.field-meta.xml
<CustomField>
        <fullName>Number_of_Contacts__c</fullName>
        <label>Number of contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>