unpackaged/main/default/objects/Account/fields/Trigger_Time_05__c.field-meta.xml
<CustomField>
        <fullName>Trigger_Time_05__c</fullName>
        <formula>Now() - 0.038</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trigger Time 05</label>
        <type>DateTime</type>
    </CustomField>